@@ -1,3 +1,8 @@
+2010-08-26  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* elf32-arm.c (elf32_arm_final_link): Process stub sections
+	exactly once.
+
 2010-08-25  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/11939
